# diplom_autoencoder

./: .gitignore  Diagrams.drawio  Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
data/: raw.dvc
data/raw/: test_FD001.csv  test_FD003.csv  train_FD001.csv  train_FD003.csv
docs/: KursovayaPPiVKS (2).docx  Path_For_WSL.txt  temp-plot.html
notebooks/: AnalysData.ipynb  Pipeline.ipynb
notebooks/old/: Cours.ipynb  DL_Lab_2_Zakh_test.ipynb
src/: process.py  train_model.py
src/preprocess_data/: Pipeline.ipynb  prepData.py  pyproject.toml
tests/: LearnTests.ipynb
