[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preprocess_data"
version = "0.0.1"
authors = [
  { name="DZ" },
]
description = "package from delet null data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dimitriy200/diplom_autoencoder/blob/main/src/preprocess_data/prepData.py"